TEST_PROGRAMS/VALID/07/decl_decassign.go
// go lecture (6), slide 8
package main


func main () {
	x, y := 0, 1
}
