TEST_PROGRAMS/INVALID/03/invalid_return1.go
package main

func f() {

	switch x { 
	//return multiple values!!
	case x < 0:
		return -x
	default:
		return x,y
	}
}
